# RPseeee

./: Cargo.toml  LICENSE  README.md
crates/rpc-cli/: Cargo.toml
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: lib.rs  main.rs
crates/rpc-core/: Cargo.toml
crates/rpc-core/src/: framing.rs  lib.rs  message.rs  rpc.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: handler.rs  lib.rs  main.rs  registry.rs
